Basic LIMS and ELN data added
